--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "classnames": "^2.3.1",
+    "primeflex": "^3.0.1",
+    "primeicons": "^4.1.0",
+    "primereact": "^6.5.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
